--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
